cmake_minimum_required(VERSION 3.27)
project(HW4)

set(CMAKE_CXX_STANDARD 17)

add_executable(HW4_q1 gnf5628_HW4_q1.cpp
)
add_executable(HW4_q2 gnf5628_HW4_q2.cpp
)
add_executable(HW4_q3 gnf5628_HW4_q3.cpp
)
add_executable(HW4_q4 gnf5628_HW4_q4.cpp
)
add_executable(HW4_q5 gnf5628_HW4_q5.cpp
)

add_executable(HW4_q6 gnf5628_HW4_q6.cpp
)